[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://mundo.gd" type="Script" id=2]
[ext_resource path="res://Monstruo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/Fondo.png" type="Texture" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1272, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="mundo" type="Node2D"]
script = ExtResource( 2 )
Monstruo = ExtResource( 3 )

[node name="Fondo" type="TextureRect" parent="."]
margin_left = -8.0
margin_right = 1272.0
margin_bottom = 720.0
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MonstruoTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PunteoTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PosicionDeinicio" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MonstruoPosicion" type="PathFollow2D" parent="Camino"]

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MonstruoTimer" to="." method="_on_MonstruoTimer_timeout"]
[connection signal="timeout" from="PunteoTimer" to="." method="_on_PunteoTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="_on_Interfaz_iniciar_juego"]
[connection signal="visibility_changed" from="Interfaz" to="." method="nuevo_juego"]
